--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.3.0",
-    "react-native-swipe-list-view": "^3.0.1",
+    "react-native-swipe-list-view": "2.5.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.2.2",
     "react-navigation-drawer": "^2.4.4",
